[gd_scene load_steps=7 format=3 uid="uid://dw6wbn7dx1ceu"]

[ext_resource type="Script" uid="uid://bw471dlt0wud6" path="res://entities/ui/destination_arrow/destination_arrow.gd" id="1_wweke"]
[ext_resource type="Material" uid="uid://dgt2gep6am8f4" path="res://entities/shared/material_emissive_green.tres" id="2_5ayho"]
[ext_resource type="Material" uid="uid://bnjd607l1q1re" path="res://entities/shared/material_emissive_yellow.tres" id="3_iumwp"]
[ext_resource type="Material" uid="uid://c2pcf1s4h0wpp" path="res://entities/shared/material_emissive_red.tres" id="4_0o6vh"]

[sub_resource type="PrismMesh" id="PrismMesh_wm8gn"]
size = Vector3(0.5, 0.5, 0.1)

[sub_resource type="CylinderMesh" id="CylinderMesh_ught2"]
top_radius = 0.05
bottom_radius = 0.1
height = 0.5

[node name="DestinationArrow" type="Node3D"]
script = ExtResource("1_wweke")
green_material = ExtResource("2_5ayho")
yellow_material = ExtResource("3_iumwp")
red_material = ExtResource("4_0o6vh")

[node name="ArrowHead" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, -3.82137e-15, 0, -4.37114e-08, -1, -8.74228e-08, -1, 4.37114e-08, 2.18557e-08, 0, -0.2)
mesh = SubResource("PrismMesh_wm8gn")

[node name="ArrowShaft" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, -3.82137e-15, 0, -4.37114e-08, -1, -8.74228e-08, -1, 4.37114e-08, -2.18557e-08, 0, 0.3)
mesh = SubResource("CylinderMesh_ught2")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(64, 64)

[node name="Control" type="Control" parent="SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DistanceLabel" type="Label" parent="SubViewport/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
